...
        android:fillViewport="true"
        android:paddingHorizontal="@dimen/padding_16"
        app:layout_constraintBottom_toTopOf="@+id/number_data_detail_add_filter"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/details_number_data_item_contact"
                layout="@layout/item_contact"
...
                android:layout_marginHorizontal="@dimen/margin_2"
                android:layout_marginTop="@dimen/margin_8"
                app:contactWithFilter="@{contactWithFilter}"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/details_number_data_create_blocker"
                android:layout_width="@dimen/size_0"
                android:layout_height="wrap_content"
                style="@style/StrokeButtonStyle"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/filter_action_create"
                android:layout_marginEnd="@dimen/margin_8"
                android:textColor="@color/white"
                app:backgroundTint="@color/button_bg"
                app:icon="@drawable/ic_blocker_white"
                app:iconGravity="textEnd"
                android:contentDescription="@string/creating_blocker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/details_number_data_create_permission"
                app:layout_constraintTop_toBottomOf="@+id/details_number_data_item_contact" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/details_number_data_create_permission"
                android:layout_width="@dimen/size_0"
                android:layout_height="@dimen/size_0"
...
                app:layout_constraintStart_toEndOf="@+id/details_number_data_create_blocker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/details_number_data_create_blocker"
                app:layout_constraintTop_toTopOf="@+id/details_number_data_create_blocker" />

            <com.tarasovvp.smartblocker.utils.EmptyStateView
                android:id="@+id/details_number_data_hidden"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_0"
                app:description="@{EmptyState.EMPTY_STATE_HIDDEN.description}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_number_data_create_blocker" />

            <ImageView
                android:id="@+id/details_number_data_tabs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_filter_details_tab_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_number_data_create_blocker" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/details_number_data_view_pager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_0"
                android:paddingBottom="@dimen/padding_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_number_data_tabs" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/number_data_detail_add_filter_full"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_condition_full"
                app:icon="@drawable/ic_condition_full"
                android:visibility="gone"
                android:layout_marginTop="@dimen/margin_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_number_data_create_blocker" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/number_data_detail_add_filter_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_condition_start"
                app:icon="@drawable/ic_condition_start"
                android:visibility="gone"
                android:layout_marginTop="@dimen/margin_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number_data_detail_add_filter_full" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/number_data_detail_add_filter_contain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_condition_contain"
                app:icon="@drawable/ic_condition_contain"
                android:visibility="gone"
                android:layout_marginTop="@dimen/margin_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number_data_detail_add_filter_start" />
...
