...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_8"
            android:paddingVertical="@dimen/padding_16">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/item_contact_avatar"
                android:layout_width="@dimen/margin_50"
                android:layout_height="@dimen/margin_50"
                android:background="@color/avatar_bg"
                android:scaleType="center"
                app:imageUrl="@{contactWithFilter.photoUrl}"
                app:placeHolder="@{contactWithFilter.placeHolder(context)}"
                app:shapeAppearanceOverlay="@style/RoundedImageViewStyle"
                app:layout_constraintBottom_toBottomOf="@+id/item_contact_name"
                app:layout_constraintEnd_toStartOf="@+id/item_contact_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/item_contact_number" />

            <ImageView
                android:id="@+id/item_contact_filter"
                android:layout_width="@dimen/margin_20"
                android:layout_height="@dimen/margin_20"
                app:imageResource="@{contactWithFilter.filterTypeIcon}"
                app:layout_constraintBottom_toBottomOf="@+id/item_contact_avatar"
                app:layout_constraintEnd_toEndOf="@+id/item_contact_avatar" />

...
                android:layout_width="@dimen/size_0"
                android:layout_height="wrap_content"
                android:text="@{contactWithFilter.highlightedSpanned}"
                android:layout_marginHorizontal="@dimen/margin_16"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_contact_avatar"
                app:layout_constraintEnd_toStartOf="@+id/item_contact_validity"
                app:layout_constraintBottom_toTopOf="@+id/item_contact_name" />

            <TextView
                android:id="@+id/item_contact_validity"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_0"
...
                android:layout_marginTop="@dimen/margin_8"
                android:textColor="@color/text_color_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/item_contact_number"
                app:layout_constraintTop_toBottomOf="@+id/item_contact_number"
                app:layout_constraintBottom_toBottomOf="@+id/item_contact_avatar"
                app:mainText="@{ contactWithFilter.contactName.empty ? @string/details_number_not_from_contacts : contactWithFilter.contactName}"
                app:searchText="@{contactWithFilter.searchText}" />

            <View
                android:id="@+id/item_contact_divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_1"
                android:background="@color/light_steel_blue"
                android:layout_marginTop="@dimen/margin_8"
                app:layout_constraintTop_toBottomOf="@+id/item_contact_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/item_contact_filter_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_10"
                android:layout_marginTop="@dimen/margin_5"
                android:text="@{contactWithFilter.emptyFilter ? @string/details_number_contact_without_filter : contactWithFilter.filterWithFilteredNumberUIModel.blocker ? @string/details_number_block_with_filter : @string/details_number_permit_with_filter}"
                android:textColor="@{contactWithFilter.emptyFilter ? @color/text_color_grey : contactWithFilter.filterWithFilteredNumberUIModel.blocker ? @color/sunset : @color/islamic_green}"
                app:layout_constraintTop_toBottomOf="@+id/item_contact_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/item_contact_filter_value" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/item_contact_filter_value"
                android:layout_width="@dimen/size_0"
                android:layout_height="@dimen/size_0"
                android:textSize="@dimen/text_size_10"
...
