...
    <string name="creating_country_description">Country %s</string>
    <string name="creating_country_code_description">Country code %s</string>
    <!--Details number-->
    <string name="details_number">Number</string>
    <string name="details_number_incomplete">Incomplete</string>
    <string name="details_number_invalid">Invalid</string>
    <string name="details_number_hidden">Hidden</string>
    <string name="details_number_not_from_contacts">Number not in contacts</string>
    <string name="details_number_from_call_log">Number from call log</string>
    <plurals name="details_number_block_contacts">
        <item quantity="one">Block %s contact</item>
        <item quantity="few">Block %s contacts</item>
        <item quantity="other">Block %s contacts</item>
        <item quantity="many">Block %s contacts</item>
    </plurals>
...
        <item quantity="zero">%s calls permitted</item>
        <item quantity="one">Permitted %s call</item>
        <item quantity="few">%s calls permitted</item>
        <item quantity="other">%s calls permitted</item>
    </plurals>
    <string name="details_number_contact_without_filter">No match with the filter</string>
    <string name="details_number_hidden_on">Hidden number blocking enabled</string>
    <string name="details_number_hidden_off">Hidden number blocking disabled</string>
    <string name="details_number_block_with_filter">Will be blocked by filter:&#160;</string>
    <string name="details_number_permit_with_filter">Will be permitted by filter:&#160;</string>
    <string name="details_number_call_without_filter">No filter match</string>
    <string name="details_number_blocked_by_filter">Blocked by filter:&#160;</string>
    <string name="details_number_permitted_by_filter">Permitted by filter:&#160;</string>
    <string name="details_number_blocked_by_settings">Blocked by Smart Blocker settings&#160;</string>
    <string name="number_details_close">Close</string>
    <!--Settings screens-->
    <string name="settings">Settings</string>
    <string name="settings_blocker">Blocker settings</string>
    <string name="settings_account">Your account</string>
    <string name="settings_language">Language</string>
    <string name="settings_theme">Selecting a theme</string>
    <string name="settings_feedback">Contact developer</string>
    <string name="settings_privacy">Privacy Policy</string>
...
