...
    <fragment
        android:id="@+id/listBlockerFragment"
        android:name="com.tarasovvp.smartblocker.presentation.main.number.list.listfilter.ListBlockerFragment"
        android:label="@string/list_blocker">
        <action
            android:id="@+id/startCreateFilterFragment"
            app:destination="@id/createFilterFragment" />
        <action
            android:id="@+id/startDetailsFilterFragment"
            app:destination="@id/detailsFilterFragment" />
        <action
            android:id="@+id/startNumberDataFilteringDialog"
            app:destination="@id/numberDataFilteringDialog" />
...
            android:name="filterWithFilteredNumberUIModel"
            android:defaultValue="@null"
            app:argType="com.tarasovvp.smartblocker.presentation.uimodels.FilterWithFilteredNumberUIModel"
            app:nullable="true" />
        <action
            android:id="@+id/startDetailsNumberDataFragment"
            app:destination="@id/detailsNumberDataFragment" />
        <action
            android:id="@+id/startFilterActionDialog"
            app:destination="@id/filterActionDialog" />
        <action
            android:id="@+id/startListBlockerFragment"
            app:destination="@id/listBlockerFragment"
...
            app:destination="@id/countryCodeSearchDialog" />
        <action
            android:id="@+id/startFilterActionDialog"
            app:destination="@id/filterActionDialog" />
        <action
            android:id="@+id/startSettingsBlockerFragment"
            app:destination="@id/settingsBlockerFragment" />
        <action
            android:id="@+id/startDetailsFilterFragment"
            app:destination="@id/detailsFilterFragment" />
        <action
            android:id="@+id/startDetailsNumberDataFragment"
            app:destination="@id/detailsNumberDataFragment" />
...
